# GestureSampleCollector

./: .gitignore  CMakeLists.txt  README.md
scripts/: display_gestures.rb  resize_samples.rb  sample_cleaner.rb
src/: CvQtImgConvertor.cpp  CvQtImgConvertor.hpp  GestureSampleCollector.cpp  GestureSampleCollector.hpp  HandDetector.cpp  HandDetector.hpp  MainView.cpp  MainView.hpp  MonitorView.cpp  MonitorView.hpp  SampleCollector.cpp  SampleCollector.hpp  Settings.cpp  Settings.hpp  SettingsView.cpp  SettingsView.hpp  Singleton.hpp  collector.cpp  config.h
